Closed Bug 21852 Opened 26 years ago Closed 26 years ago

[DOGFOOD] [REGRESSION] Large Image attachments hang on mail display

Categories

(MailNews Core :: MIME, defect, P3)

x86
Windows NT
defect

Tracking

(Not tracked)

VERIFIED FIXED

People

(Reporter: rhp, Assigned: rhp)

Details

(Whiteboard: [PDT+])

We have a problem with image attachments over 32K. It will hang the application. We really need to fix this one. mscott helped me fix this bug and I have a reviewed patch ready to checkin.
QA Contact: lchiang → pmock
Summary: [DOGFOOD] Large Image attachments hang on mail display → [DOGFOOD] [REGRESSION] Large Image attachments hang on mail display
This regression was caused by the fix to Bug #21436. The fix involve properly kicking out of a while loop if an error code is returned. i.e. we had code that looked like while (dataToSend) writeData(); the fix is simply to kick out of the while loop if writeData returned an error code. Nothing fancy...pretty low risk.
Whiteboard: [PDT+]
Putting on PDT+ radar.
Status: NEW → RESOLVED
Closed: 26 years ago
Resolution: --- → FIXED
Target Milestone: M12
OK using 12-17-10m12 commercial build on linux 6.0
Status: RESOLVED → VERIFIED
OK using 12-16-12m12 commerical builds on NT 4.0 and Mac OS 8.5.1
Product: MailNews → Core
Product: Core → MailNews Core
You need to log in before you can comment on or make changes to this bug.