Large Image attachments hang on mail display fix - Bug #21852 - r: mscott/rhp approved: chofmann